# betrayal

./: .gitignore  AGENTS.md  Betrayal.html  Betrayal.txt  Betrayal_clean.txt  arquitetura_rag_livro.md  betrayal.json  betrayal_validation_report.json  build_betrayal_json.py  build_betrayal_json_deprecated.py  build_betrayal_json_from_epub.py  build_betrayal_short_epub.py  chapter_json_examples.json  config_utils.py  contents.txt  doit.md  dotenv_crypt.py  eta_estimator.py  main.py  manual_summarizador.md  openai_live_smoke_test.py  openai_structured_cache.py  openai_utils.py  p_inner_tags_report.json  possible_new_schema_ideas.md  project_paths.py  pyproject.toml  rag_pipeline_plan_two_passes.md  scan_p_tags.py  summarize_betrayal_json.py  validate_betrayal_json.py
.serena/: project.yml
data/: betrayal.json  betrayal_short.epub  betrayal_short.json  betrayal_short_draft_limit_3.json  betrayal_short_limit_1.json  betrayal_short_limit_3.json  schema_contract_validation.json
ingest/: dodo.py  logging_utils.py  pass_01_5_prepare_for_pass_02.py  pass_01_classify_chapters.py  pass_02_extract_and_bundle.py  pipeline_common.py  pipeline_params.py  run_pipeline.py  validate_schema_contracts.py
prompts/: pass_01_classification_system.txt  pass_01_user.j2  pass_02_extraction_system.txt  pass_02_user.j2  summarize.txt  summarize.xml  summarize_example.txt
schemas/: pass_01_chapter_classification.schema.json  pass_01_chapter_classification_item.schema.json  pass_02_rag_bundle.schema.json  pass_02_rag_bundle_item.schema.json
tests/: test_build_betrayal_json.py  test_dodo.py  (+12 more)
(+59 files in other folders)
